# Dumicola

./: .gitignore  Dumicola.kdev4  README.md  grep  make.ps1  make.sh
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cpp.hint
src/.kdev4/: src.kdev4
src/Dumimobile/: settings.gradle.kts
src/Dumimobile/app/: build.gradle.kts
src/Dumimobile/app/src/androidTest/java/com/knx/dumimobile/: ExampleInstrumentedTest.kt
src/Dumimobile/app/src/main/: AndroidManifest.xml
src/Dumimobile/app/src/main/cpp/: CMakeLists.txt  dumimobile.cpp  mobileLogger.cpp
src/Dumimobile/app/src/main/java/com/example/dumimobile/: MainActivity.kt
src/Dumimobile/app/src/main/java/com/example/dumimobile/ui/gallery/: GalleryFragment.kt  GalleryViewModel.kt
src/Dumimobile/app/src/main/java/com/example/dumimobile/ui/home/: HomeFragment.kt  HomeViewModel.kt
src/Dumimobile/app/src/main/java/com/example/dumimobile/ui/slideshow/: SlideshowFragment.kt  SlideshowViewModel.kt
src/Dumimobile/app/src/main/java/com/knx/dumimobile/: MainActivity.kt
src/Dumimobile/app/src/main/java/com/knx/dumimobile/ui/apps/: AppsFragment.kt
src/Dumimobile/app/src/main/java/com/knx/dumimobile/ui/comLibrary/: ComLibraryFragment.kt  ComLibraryViewModel.kt
src/Dumimobile/app/src/main/java/com/knx/dumimobile/ui/dashboard/: DashboardFragment.kt  HomeViewModel.kt
src/Dumimobile/app/src/main/java/com/knx/dumimobile/ui/designer/: DesignerFragment.kt
src/Dumimobile/app/src/main/java/com/knx/dumimobile/ui/gallery/: GalleryFragment.kt  GalleryViewModel.kt
src/Dumimobile/app/src/main/java/com/knx/dumimobile/ui/home/: HomeFragment.kt  HomeViewModel.kt
src/Dumimobile/app/src/main/java/com/knx/dumimobile/ui/network/: NetworkFragment.kt
src/Dumimobile/app/src/main/res/layout/: app_bar_main.xml  fragment_apps.xml  fragment_designer.xml  fragment_gallery.xml  fragment_home.xml  fragment_library.xml  fragment_network.xml  fragment_settings.xml
src/Dumimobile/app/src/main/res/menu/: activity_main_drawer.xml
src/Dumimobile/app/src/main/res/navigation/: mobile_navigation.xml
src/Dumimobile/app/src/main/res/values/: strings.xml  themes.xml
src/Dumimobile/app/src/main/res/values-night/: themes.xml
src/Dumimobile/app/src/test/java/com/knx/dumimobile/: ExampleUnitTest.kt
src/Dumimobile/gradle/wrapper/: gradle-wrapper.properties
src/android/: settings.gradle.kts
src/android/app/: .build.gradle.kts.swp  build.gradle.kts
src/android/app/src/androidTest/java/com/example/dumimobile/: ExampleInstrumentedTest.kt
src/android/app/src/main/: AndroidManifest.xml
src/android/app/src/main/cpp/: CMakeLists.txt  jInterop.cpp  jInterop.h  mobileLogger.cpp  mobileLogger.h  native-lib.cpp
src/android/app/src/main/java/com/example/dumimobile/: MainActivity.kt  Settings.kt
src/android/app/src/main/java/com/example/dumimobile/navigation/: DrawItemAdapter.kt  NavModel.kt
src/android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml  list_view_item_row.xml  toolbar.xml
src/android/app/src/main/res/values/: strings.xml  themes.xml
src/android/app/src/test/java/com/example/dumimobile/: ExampleUnitTest.kt
src/android/gradle/: libs.versions.toml
src/android/gradle/wrapper/: gradle-wrapper.properties
src/apprunner/: CMakeLists.txt  README.md
src/config/: CMakeLists.txt  config.h  config.hpp  environment.h  environment.h.in  optimize.h  optimize.h.in  optimize.hpp  platform.hpp  platform.hpp.in
src/datamanager/: CMakeLists.txt  dataman.cpp  dataman.h  dataman.hpp
src/dcstl/: CMakeLists.txt
src/dcstl/hypatia/: CMakeLists.txt
src/dcstl/porus/: CMakeLists.txt
src/dcstl/vulkan/: CMakeLists.txt  vulkan.cpp  vulkan.h
src/dcutils/: CMakeLists.txt  CmakeLists.txt  dc_file.cpp  dc_file.h  dc_string.cpp  dc_string.h  dc_string.hpp  id.cpp  id.h  id.hpp  maputil.h  maputil.hpp  utils.h  utils.hpp
src/dumicommon/: CMakeLists.txt  Makefile  cmake_install.cmake  dbcontext.hpp  defs.hpp  dtypes.cpp  dtypes.hpp  dumicommon.cpp  dumicommon.hpp  dumicommon_version.h  dumicommon_version.h.in  test.cpp  test.hpp
src/dumicore/: CMakeLists.txt  Makefile  README.md  appman.cpp  appman.hpp  cmake_install.cmake  dumicore.cpp  dumicore.h  dumicore.hpp  logging.h  logging.hpp
src/dumidesk/: CMakeLists.txt  Makefile  cmake_install.cmake  dumidesk.cpp  logger.cpp  logger.h  logger.hpp  processManager.cpp  processManager.h
src/dumiengine/: CMakeLists.txt  README.md  alu.cpp  alu.h  bytecode.h  dccompile.cpp  dccompile.h  dlEngine.cpp  dlEngine.h  dlEngine_old.cpp  dlEngine_old.h  instruction.h  programblock.cpp  programblock.h  vMem.h
src/dumilang/: CMakeLists.txt  README.md  bytecode.h  dlEngine.cpp  dlEngine.h  dumilang.h  token.cpp  token.h  tokenizer.cpp
src/dumilang/src/devcomponent1/: double.dumi  library.dumi
src/dumilogger/: CMakeLists.txt  dumiLogger.cpp  dumiLogger.hpp
src/dumisdk/: CMakeLists.txt  README.md  __dumisdk_init.cpp  __dumisdk_init.hpp  app.h  app.hpp  component.cpp  component.h  component.hpp  component_interface.hpp  container_interfaces.hpp  dbcontext.h  dcProvider.h  dcProvider.hpp  defs.h  defs.hpp  dtypes.cpp  dtypes.h  dtypes.hpp  dumiexcept.cpp  dumiexcept.h  dumiexcept.hpp  dumisdk.cpp  dumisdk.h  dumisdk.hpp  dumisdk_version.h  dumisdk_version.h.in  dumisdk_version.hpp  libManager.cpp  libManager.h  logger.cpp  logger.hpp  objSRef.hpp  optiondefs.hpp  service_interfaces.cpp  service_interfaces.h  service_interfaces.hpp  services.hpp  typeConversion.h  typeConversion.hpp  (+2 more)
src/libmanager/: CMakeLists.txt  libManager.cpp  libManager.h
src/servicemanager/: CMakeLists.txt  serviceman.cpp  serviceman.h  serviceman.hpp  serviceman_old.h  serviceman_old.hpp
src/test/: CMakeLists.txt  component_test.cpp  dtypes_test.cpp  dtypes_test.hpp  dumi_tests.cpp  dumicore_testgroup.cpp  dumilang_test.cpp  engine_test.cpp  fixtures.cpp  fixtures.h  fixtures.hpp  kassert.cpp  kassert.h  kassert.hpp  msc_test.cpp  plugin_test.cpp  service_tests.cpp  testgroup.cpp  tests.h  tests.hpp
src/test/test/: program1.dc
src/test/test/devcomponent1/: double.dumi
(+9 files in other folders)
